--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Image Viewer</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	
 </head>
 <body>
@@ -14,13 +15,18 @@
 		<div class="col-md-1">
 		</div>
 		<div class="col-md-10">
+			<div style="width: 400px; height: 400px;margin-left: auto; margin-right: auto;">
+				<img id="currentImage" style="width: 100%; " />
 			</div>
-				<img id="currentImage" style="max-width: 500px; max-height: 500px;" /></div>
-			</div>
-			<div>
-				<a href="#" id="previous"><< previous</a>
-				<a href="#" id="next">>> next</a>
-			</div>
+		</div>
+	</div>
+	<div class="row" style="margin-top: 50px;">
+		<div class="col-md-5">
+		</div>
+		<div>
+			<button type="button" class="btn btn-success" id="previous"><i class="fa fa-arrow-circle-left fa-3x"></i></button>
+			<label style="margin-left: 5px; margin-right: 5px;" id="directoryStats"></label>
+			<button type="button" class="btn btn-success" id="next"><i class="fa fa-arrow-circle-right fa-3x"></i></button>
 		</div>
 	</div>
 </div>
