Adding File-Open. Refactoring.

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
 		<div class="col-md-10">
 			<div style="width: 400px; height: 400px;margin-left: auto; margin-right: auto;">
 				<img id="currentImage" style="width: 100%; " />
+
+				<button id="open-file" style="position: relative; top: 50%; left: 50%; margin: -60px -60px;" type="button" class="btn btn-secondary-outline btn-lg">Select a file...</button>
 			</div>
 		</div>
 	</div>
