Adding Delete image

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row" style="margin-top: 50px;">
+	<div class="row" style="margin-top: 50px;" id="control-panel">
 		<div class="col-md-5">
 		</div>
 		<div>
