--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,9 @@
 		<div class="col-md-1">
 		</div>
 		<div class="col-md-10">
+		<!-- class="text-center">-->
 			<div style="width: 400px; height: 400px;margin-left: auto; margin-right: auto;">
-				<img id="currentImage" style="width: 100%; " />
+				<img id="currentImage" class="img-thumbnail center-block" style="width: 100%; " />
 
 				<button id="open-file" style="position: relative; top: 50%; left: 50%; margin: -60px -60px;" type="button" class="btn btn-secondary-outline btn-lg">Select a file...</button>
 			</div>
@@ -26,9 +27,11 @@
 		<div class="col-md-5">
 		</div>
 		<div>
+			<button type="button" class="btn btn-primary" id="rotate-left"><i class="fa fa-undo fa-2x"></i></button>
 			<button type="button" class="btn btn-success" id="previous"><i class="fa fa-arrow-circle-left fa-3x"></i></button>
 			<label style="margin-left: 5px; margin-right: 5px;" id="directoryStats"></label>
 			<button type="button" class="btn btn-success" id="next"><i class="fa fa-arrow-circle-right fa-3x"></i></button>
+			<button type="button" class="btn btn-primary" id="rotate-right"><i class="fa fa-repeat fa-2x"></i></button>
 		</div>
 	</div>
 </div>
