Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
 
     <section class="main-content">
       <h1>
-<a id="image-viewer" class="anchor" href="#image-viewer" aria-hidden="true"><span class="octicon octicon-link"></span></a>image-viewer</h1>
+<a id="image-viewer" class="anchor" href="#image-viewer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Image Viewer</h1>
 
-<p>Cross-Platform Image Viewer based on Electron. Easy view a directory of images - just open any image from the directory and navigate easily via the app.</p>
+<p>A cross-platform Image Viewer based on Electron. It runs on OS X, Windows and Linux. It provides an easy interface to browse a directory of images using the left and right keyboard buttons.</p>
 
 <h1>
 <a id="preview" class="anchor" href="#preview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preview</h1>
 
-<p><img src="http://i.imgur.com/0KY8T71.png" alt="alt tag"></p>
-
-<p><img src="http://i.imgur.com/oBEfvA5.png" alt="alt tag"></p>
+<p><img src="http://i.imgur.com/GjDwXWj.jpg" alt="alt tag"></p>
 
 <h1>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h1>
 
 <ul>
-<li>Open a File and browse all Image Files from the same directory</li>
-<li>Open a Directory and browse all Image Files from the same directory</li>
-<li>Navigate fast through the images via Left/Right keyboard buttons.</li>
+<li>Open a Directory and browse it's images</li>
+<li>Open an Image File and browse the images inside the same directory</li>
+<li>Fast navigation through the images via Left/Right keyboard buttons</li>
+<li>Rotate an image clockwise/anti-clockwise</li>
+<li>Save/Move the image to a new location</li>
 </ul>
 
 <h1>
-<a id="how-to-run" class="anchor" href="#how-to-run" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run</h1>
+<a id="how-to-run-manually" class="anchor" href="#how-to-run-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run manually</h1>
 
 <ul>
-<li><p>Clone the repo</p></li>
+<li><p>First clone the repo</p></li>
 <li><p>Install the dependencies</p></li>
 </ul>
 
