Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 </ul>
 
 <h1>
+<a id="installer" class="anchor" href="#installer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installer</h1>
+
+<p>Download and install the Image Viewer with simple one-click installation. Choose from the platforms below:</p>
+
+<ul>
+<li>OSX: <a href="https://github.com/yyosifov/image-viewer/raw/master/dist/osx/Image%20Viewer.dmg">Image Viewer.dmg</a>
+</li>
+</ul>
+
+<h1>
 <a id="how-to-run-manually" class="anchor" href="#how-to-run-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to run manually</h1>
 
 <ul>
