Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h1>
 <a id="preview" class="anchor" href="#preview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preview</h1>
 
-<p><img src="http://i.imgur.com/GjDwXWj.jpg" alt="alt tag"></p>
+<p><img src="http://i.imgur.com/JM0GaFJ.jpg" alt="alt tag"></p>
 
 <h1>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h1>
