Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <p>Download and install the Image Viewer with simple one-click installation. Choose from the platforms below:</p>
 
 <ul>
-<li>OSX: <a href="https://github.com/yyosifov/image-viewer/raw/master/dist/osx/Image%20Viewer.dmg">Image Viewer.dmg</a>
-</li>
+<li><p>OSX: <a href="https://github.com/yyosifov/image-viewer/raw/master/dist/osx/Image%20Viewer.dmg">Image Viewer.dmg</a></p></li>
+<li><p>Windows: <a href="https://github.com/yyosifov/image-viewer/raw/master/dist/win/Image%20Viewer%20Setup.exe">Image Viewer Setup.exe</a></p></li>
 </ul>
 
 <h1>
