Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
 <h1>
 <a id="preview" class="anchor" href="#preview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Preview</h1>
 
+<ul>
+<li>OS X:</li>
+</ul>
+
 <p><img src="http://i.imgur.com/JM0GaFJ.jpg" alt="alt tag"></p>
+
+<ul>
+<li>Windows:</li>
+</ul>
+
+<p><img src="http://i.imgur.com/uYsD4yy.png" alt="alt tag"></p>
+
+<ul>
+<li>Linux:</li>
+</ul>
+
+<p><img src="http://i.imgur.com/KXlmv3o.png" alt="alt tag"></p>
 
 <h1>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h1>
@@ -46,8 +62,12 @@
 <p>Download and install the Image Viewer with simple one-click installation. Choose from the platforms below:</p>
 
 <ul>
-<li><p>OSX: <a href="https://github.com/yyosifov/image-viewer/raw/master/dist/osx/Image%20Viewer.dmg">Image Viewer.dmg</a></p></li>
-<li><p>Windows: <a href="https://github.com/yyosifov/image-viewer/raw/master/dist/win/Image%20Viewer%20Setup.exe">Image Viewer Setup.exe</a></p></li>
+<li>OS X:
+<a href="https://github.com/yyosifov/image-viewer/raw/master/dist/osx/Image%20Viewer.dmg">Image Viewer.dmg</a>
+</li>
+<li>Windows:
+<a href="https://github.com/yyosifov/image-viewer/raw/master/dist/win/Image%20Viewer%20Setup.exe">Image Viewer Setup.exe</a>
+</li>
 </ul>
 
 <h1>
