Fix #34 vertical resizing by storing the Container with the image size for vertical/horizontal views and scale down the image if neccessary

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div class="div-image">
-			<div class='div-center-container'>
+			<div id='div-center-container' class='div-center-container'>
 				<button id="open-file"  type="button" class="btn btn-secondary-outline btn-lg">Open</button>
 
 				<img id="currentImage" />
